--- a/main.yml
+++ b/main.yml
@@ -2,34 +2,69 @@
 
 ---
 - hosts: all
+  sudo: yes
+
   vars_files:
     - vars.yml
+
   tasks:
   - name: update apt
     apt: update_cache=yes
+
   - name: ensure packages installed
     apt: pkg={{ item }} state=latest
     with_items:
       - make
       - build-essential
       - tcl8.5
+
   - name: download latest stable redis
     get_url: url=http://download.redis.io/redis-stable.tar.gz dest=/tmp/redis-stable.tar.gz
+
   - name: untar redis
     command: tar zxf /tmp/redis-stable.tar.gz -C /tmp
+
   - name: build redis
     command: make -C /tmp/redis-stable
+
+  - name: create redis group
+    group: name=redis state=present system=yes
+
+  - name: create redis user
+    user: name=redis group=redis createhome=no shell=/bin/false system=yes state=present
+
+  - name: make sure that /etc/redis exists
+    file: path=/etc/redis state=directory mode=0755
+
+  - name: make sure that /var/db/redis exists
+    file: path=/var/db/redis state=directory mode=0755 group=redis owner=redis
+
+  - name: copy upstart file
+    copy: src=templates/upstart.conf dest=/etc/init/redis.conf
+
+  - name: copy redis.conf file
+    copy: src=templates/redis.conf dest=/etc/redis/redis.conf group=redis owner=redis
+
+  - name: copy custom template
+    template: src=templates/redis.local.conf.j2 dest=/etc/redis/redis.local.conf group=redis owner=redis
+
+  - name: copy redis-local script
+    template: src=templates/redis-local.j2 dest=/usr/local/bin/redis-local mode=0755
+
   - name: installing redis binaries
-    sudo: yes
     command: cp /tmp/redis-stable/src/{{ item }} /usr/local/bin
     with_items: 
       - redis-server
       - redis-cli
       - redis-check-aof
       - redis-check-dump
+
   - name: cleaning up build files
     command: rm -rf /tmp/{{ item }}
     with_items:
       - redis-stable
       - redis-stable.tar.gz
+
+  - name: ensure redis service is restarted
+    service: name=redis state=restarted
 
